--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -429,6 +429,13 @@ resources:
     private_key: ((cf-loggregator-oauth-bot-key))
     disable_ci_skip: true
 
+- name: grpc-go
+  type: git
+  source:
+    uri: https://github.com/grpc/grpc-go
+    branch: v1.11.x
+    tag_filter: v1.11.1
+
 jobs:
 ###############################################################################
 # DIRECTOR LIFECYCLE
@@ -540,6 +547,7 @@ jobs:
   - aggregate:
     - get: loggregator-src
       trigger: true
+    - get: grpc-go
     - get: 20m
       trigger: true
   - aggregate:
@@ -553,6 +561,7 @@ jobs:
             repository: loggregator/base
         inputs:
         - name: loggregator-src
+        - name: grpc-go
         run:
           path: bash
           args:
@@ -570,6 +579,11 @@ jobs:
 
               pushd src/code.cloudfoundry.org/loggregator
                 go get -t -d ./...
+
+                # hack until we figure out a solution to pin versions of deps
+                rm -rf ../../../../workspace/src/google.golang.org/grpc
+                cp -r ../../../../grpc-go/. ../../../../workspace/src/google.golang.org/grpc/
+
                 go test -race $(go list ./... | grep -v integration_tests) \
                   -ginkgo.randomizeAllSpecs \
                   -ginkgo.slowSpecThreshold 20
