--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -1899,6 +1899,26 @@ jobs:
             path: /instance_groups/name=scheduler/instances
             value: 3
           EOT
+  - task: set-vars-files
+    config:
+      platform: linux
+      image_resource:
+        type: docker-image
+        source:
+          repository: relintdockerhubpushbot/cf-deployment-concourse-tasks
+          tag: v3.19.0
+      outputs:
+        - name: vars-files
+      run:
+        path: "/bin/bash"
+        args:
+          - "-c"
+          - |
+            set -e
+
+            cat <<EOT >> vars-files/on-the-fly-vars.yml
+            cf_admin_password: ((coconut-password))
+            EOT
   - task: cf-deploy
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
     params:
@@ -1924,6 +1944,8 @@ jobs:
         cf-syslog-agent-skip-cert-verify-windows.yml
         cf-deployment-add-tls-to-rlp-gateway.yml
         cf-deployment-add-tls-to-trafficcontroller.yml
+      VARS_FILES: |
+        on-the-fly-vars.yml
   - task: enable-feature-flags
     file: cf-deployment-concourse-tasks/set-feature-flags/task.yml
     attempts: 3
