--- a/pipelines/config/products.yml
+++ b/pipelines/config/products.yml
@@ -1,2 +1,2 @@
-system_domain: coconut.cf-app.com
-bbl_state_dir: gcp/coconut-bbl
+system_domain: coconut.cf-denver.com
+bbl_state_dir: acceptance-bosh/loggregator/coconut
