--- a/pipelines/products.yml
+++ b/pipelines/products.yml
@@ -148,14 +148,14 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment
-    tag_filter: v7.*
+    tag_filter: v*
     private_key: ((loggregator-key))
 
 - name: cf-deployment-concourse-tasks
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
-    tag_filter: v7.*
+    tag_filter: v*
 
 - name: cf-drain-cli
   type: git
@@ -206,10 +206,17 @@ resources:
 
 - name: deployments-loggregator
   type: git
-  source: &deployments_loggregator
+  source:
     uri: git@github.com:cloudfoundry/deployments-loggregator.git
     branch: master
     private_key: {{deployments-loggregator-key}}
+
+- name: denver-locks
+  type: git
+  source:
+    uri: git@github.com:pivotal-cf/denver-locks.git
+    branch: master
+    private_key: {{cf-loggregator-oauth-bot-key}}
 
 - name: go-loggregator
   type: git
@@ -1453,6 +1460,7 @@ jobs:
       trigger: true
       passed: ["service-metrics-bump-submodule"]
     - get: deployments-loggregator
+    - get: denver-locks
     - get: loggregator-ci
     - get: on-demand-service-broker-release
       trigger: true
@@ -1464,14 +1472,14 @@ jobs:
   - task: upload-service-metrics-release
     file: loggregator-ci/tasks/upload-release/task.yml
     input_mapping:
-      bbl-state: deployments-loggregator
+      bbl-state: denver-locks
       bosh-release-dir: service-metrics-release
     params:
       BBL_STATE_DIR: ((bbl_state_dir))
   - task: upload-on-demand-service-broker-release
     file: loggregator-ci/tasks/upload-release/task.yml
     input_mapping:
-      bbl-state: deployments-loggregator
+      bbl-state: denver-locks
       bosh-release-dir: on-demand-service-broker-release
     params:
       BBL_STATE_DIR: ((bbl_state_dir))
@@ -1562,7 +1570,7 @@ jobs:
       - task: deploy-standalone
         file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
         input_mapping:
-          bbl-state: deployments-loggregator
+          bbl-state: denver-locks
           vars-store: deployments-loggregator
           ops-files: ops-files
           cf-deployment: service-metrics-release
@@ -1577,7 +1585,7 @@ jobs:
       - task: deploy-odb
         file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
         input_mapping:
-          bbl-state: deployments-loggregator
+          bbl-state: denver-locks
           vars-store: deployments-loggregator
           ops-files: ops-files
           cf-deployment: service-metrics-release
@@ -1598,7 +1606,7 @@ jobs:
       - task: register-service-broker
         file: loggregator-ci/tasks/run-errand/task.yml
         input_mapping:
-          bbl-state: deployments-loggregator
+          bbl-state: denver-locks
         params:
           BBL_STATE_DIR: ((bbl_state_dir))
           DEPLOYMENT_NAME: sample-service-metrics
@@ -1606,7 +1614,7 @@ jobs:
       - task: upgrade-all-service-instances
         file: loggregator-ci/tasks/run-errand/task.yml
         input_mapping:
-          bbl-state: deployments-loggregator
+          bbl-state: denver-locks
         params:
           BBL_STATE_DIR: ((bbl_state_dir))
           DEPLOYMENT_NAME: sample-service-metrics
@@ -1683,7 +1691,7 @@ jobs:
   - aggregate:
     - get: loggregator-ci
     - get: bbl-state
-      resource: deployments-loggregator
+      resource: denver-locks
     - get: cf-deployment
       trigger: true
     - get: cf-deployment-concourse-tasks
@@ -2028,7 +2036,7 @@ jobs:
   - task: update-config
     file: cf-deployment-concourse-tasks/update-integration-configs/task.yml
     input_mapping:
-      bbl-state: deployments-loggregator
+      bbl-state: denver-locks
       integration-configs: deployments-loggregator
     params:
       CATS_INTEGRATION_CONFIG_FILE: ((bbl_state_dir))/cats-config.json
